# diffusion-dfl-implementation

./: .gitignore  CITATION.cff  LICENSE  README.md  main.py  pyproject.toml  run.py  test.py
API/: classifier.py  dfl_ddpm.py  filtered_dataset.py  launch.py  pipeline.py  utils.py
configs/custom/: test_emnist_letters.yaml  test_fashionmnist.yaml  test_mnist.yaml  train_emnist_letters.yaml  train_fashionmnist.yaml
configs/ring/: test_emnist_letters.yaml  test_fashionmnist.yaml  test_mnist.yaml  train_emnist_letters.yaml  train_fashionmnist.yaml  train_mnist.yaml
installation/: requirements-pytorch.txt  requirements.txt
laboratory/classifiers/: emnist_letters-classifier.pth  fashionmnist-classifier.pth  mnist-classifier.pth
laboratory/topologies/custom/: labels-emnist_letters.yaml  labels-mnist.yaml  neighbours.yaml
laboratory/topologies/ring/: labels-emnist_letters.yaml  labels-fashionmnist.yaml  neighbours.yaml
laboratory/topologies/topology-1/: labels-emnist_letters.txt  labels-mnist.txt  neighbours.txt
laboratory/topologies/topology-2/: labels-emnist_letters.txt  labels-mnist.txt  neighbours.txt
src/core/: cli.py  config.py  dfl_ddpm.py  filesystem.py  launch.py  loaders_yaml.py  pipeline.py  pipeline_utils.py  testing.py  training.py
src/data/: classifier.py  filtered_dataset.py
utilities/: classifier-emnist_letters.py  classifier-fashionmnist.py  classifier-mnist.py
